Fix contrast of warning text
Fixes #737

--- a/src/assets/sass/hive-default-variables.scss
+++ b/src/assets/sass/hive-default-variables.scss
@@ -65,7 +65,7 @@
     --clr-success-text: hsl(120 60% 34%);
     --clr-success-bkgd: hsl(120 40% 90%);
     --clr-success-brdr: hsl(102 40% 68%);
-    --clr-warning-text: hsl(41 100% 40%);
+    --clr-warning-text: hsl(26 100% 20%);
     --clr-warning-bkgd: hsl(41 64% 91%);
     --clr-warning-brdr: hsl(41 64% 71%);
     --clr-error-text: hsl(4 69% 36%);
